--- a/scss/components/_alliance_fleets.scss
+++ b/scss/components/_alliance_fleets.scss
@@ -71,14 +71,14 @@
 	  tr {
 		th {
 		  &[colspan='5'] {
-			padding-bottom: 1rem;
+			padding-bottom: 14px;
 			background: transparent !important;
 		  }
 		}
 
 		td {
 		  &[colspan='5'] {
-			padding: 1rem 0;
+			padding: 14px 0;
 
 			&[class='center'] {
 			  padding: 0;
