--- a/scss/components/_foreign_affairs.scss
+++ b/scss/components/_foreign_affairs.scss
@@ -67,7 +67,7 @@
 
 	  .superhighlight {
 		font-size: 1.3rem;
-		padding: .5rem 0 .25rem;
+		padding: 7px 0 3.5px;
 		display: inline-block;
 	  }
 	}
