--- a/scss/components/_galaxy_status.scss
+++ b/scss/components/_galaxy_status.scss
@@ -28,7 +28,7 @@
 					  input {
 						&:nth-of-type(2) {
 						  width: 98%;
-						  margin: .5rem 0 0 0;
+						  margin: 7px 0 0 0;
 						}
 					  }
 					}
