--- a/scss/components/_messages.scss
+++ b/scss/components/_messages.scss
@@ -48,17 +48,17 @@
 			a {
 			  color: $color-primary !important;
 			  font-family: inherit;
-			  font-size: 1rem;
+			  font-size: 14px;
 			  font-weight: initial;
 			  text-transform: initial;
-			  padding: 0 .5rem;
+			  padding: 0 7px;
 			  display: inline-block;
 			  background: $color-secondary !important;
 			  height: 1.5rem;
 			  border: 1px solid rgba($color-primary, .5) !important;
 			  border-radius: 0;
 			  box-shadow: none;
-			  margin: 1rem 0;
+			  margin: 14px 0;
 			  cursor: pointer;
 			  transition: .3s;
 
