--- a/scss/components/_alliance_attacks.scss
+++ b/scss/components/_alliance_attacks.scss
@@ -36,7 +36,7 @@
 			  color: $color-text;
 			  font-size: $text-small;
 			  font-weight: bold;
-			  padding: .25rem .5rem;
+			  padding: 3.5px 7px;
 			  background: #171e27;
 			}
 		  }
@@ -89,7 +89,7 @@
 						li {
 						  font-size: $text-small;
 						  font-style: italic;
-						  margin: 0 .5rem;
+						  margin: 0 7px;
 
 						  a {
 							font-style: normal;
@@ -113,7 +113,7 @@
 		  }
 
 		  > td:not([colspan='6']) {
-			padding: .25rem .5rem;
+			padding: 3.5px 7px;
 
 			&.center {
 			  &[style='width: 50%;'],
@@ -123,7 +123,7 @@
 			}
 
 			> table {
-			  padding-left: 2rem;
+			  padding-left: 28px;
 			  border-spacing: 0;
 			  margin: 0;
 
@@ -131,12 +131,12 @@
 				> tr {
 				  > th {
 					font-size: $text-small;
-					padding: .25rem;
+					padding: 3.5px;
 				  }
 
 				  > th,
 				  > td {
-					padding: .25rem 0;
+					padding: 3.5px 0;
 
 					&:nth-child(1),
 					&:nth-child(2) {
@@ -145,7 +145,7 @@
 
 					&.center {
 					  text-align: left;
-					  padding-left: 1rem;
+					  padding-left: 14px;
 					}
 				  }
 				}
@@ -163,11 +163,11 @@
 
 	  tr {
 		th {
-		  padding: .25rem .5rem;
+		  padding: 3.5px 7px;
 		}
 
 		td {
-		  padding: .25rem .5rem;
+		  padding: 3.5px 7px;
 		  background: $color-secondary;
 
 		  &[colspan='5'] {
@@ -217,7 +217,7 @@
 
   &:before {
 	color: $color-offwhite;
-	font-size: 1rem;
+	font-size: 14px;
 	font-weight: bold;
 	text-transform: uppercase;
 	line-height: 100%;
@@ -245,10 +245,10 @@
   table {
 	tr {
 	  td {
-		padding-top: .5rem !important;
+		padding-top: 7px !important;
 
 		&:nth-child(2) {
-		  padding-left: .25rem !important;
+		  padding-left: 3.5px !important;
 		}
 
 		input {
