--- a/scss/components/_alliance_defence.scss
+++ b/scss/components/_alliance_defence.scss
@@ -2,7 +2,7 @@
   .maintext {
 	.ally_def_eta_wrapper {
 	  .ally_def_eta {
-		font-size: 2rem;
+		font-size: 28px;
 
 		img.ally_def_eta_toggle_img {
 		  width: .6875rem;
@@ -14,11 +14,11 @@
 		background: $color-secondary;
 		border: 1px solid rgba($color-primary, .18);
 		box-shadow: inset 0 0 8px 2px rgba(black, .25), 0 2px 10px 2px rgba(black, .15);
-		margin: 0 0 2rem 5px;
+		margin: 0 0 28px 5px;
 
 		.ally_def_target {
-		  font-size: 1rem;
-		  padding: .25rem 0;
+		  font-size: 14px;
+		  padding: 3.5px 0;
 		  background: rgba(black, .2);
 		  border-bottom: 1px solid rgba(black, .5);
 
@@ -28,13 +28,13 @@
 		  }
 
 		  .ally_def_target_toggle_link {
-			width: 1rem;
+			width: 14px;
 			margin: 0 .125rem 0 -1.25rem;
 			cursor: pointer;
 
 			img {
-			  width: 1rem;
-			  height: 1rem;
+			  width: 14px;
+			  height: 14px;
 			}
 		  }
 
@@ -54,7 +54,7 @@
 			}
 
 			.ally_def_target_mdata_nick {
-			  font-size: 1rem;
+			  font-size: 14px;
 			  overflow: hidden;
 			  min-width: 125px;
 
@@ -93,7 +93,7 @@
 			flex: 3;
 
 			span[id^='note_tag'] {
-			  margin-right: .5rem;
+			  margin-right: 7px;
 			}
 
 			a {
@@ -107,7 +107,7 @@
 				text-transform: initial;
 				line-height: 1;
 				white-space: nowrap;
-				padding: .25rem .5rem;
+				padding: 3.5px 7px;
 				content: 'Battle Calc';
 				display: inline-block;
 				background: rgba($color-secondary, .4) !important;
@@ -143,7 +143,7 @@
 			  text-transform: initial;
 			  line-height: 1;
 			  white-space: nowrap;
-			  padding: .25rem .5rem;
+			  padding: 3.5px 7px;
 			  display: inline-block;
 			  background: rgba($color-secondary, .4) !important;
 			  border: 1px solid rgba(#32ab52, .5) !important;
@@ -164,7 +164,7 @@
 			text-transform: initial;
 			line-height: 1;
 			white-space: nowrap;
-			padding: .25rem .5rem;
+			padding: 3.5px 7px;
 			display: inline-block;
 			background: rgba($color-secondary, .4) !important;
 			border: 1px solid rgba($color-primary, .5) !important;
@@ -256,8 +256,8 @@
 
 			  a {
 				color: black !important;
-				font-size: 1rem;
-				line-height: 1rem;
+				font-size: 14px;
+				line-height: 14px;
 				display: inline-flex;
 				align-items: center;
 				justify-content: center;
@@ -434,7 +434,7 @@
 			  justify-content: flex-end;
 
 			  textarea {
-				padding: .5rem .75rem;
+				padding: 7px 10.5px;
 				width: 100%;
 				margin: 0 0 4px 4px;
 			  }
@@ -563,7 +563,7 @@
 			input[id^='recall'] {
 			  font-size: 12px;
 			  height: 18px;
-			  margin: .25rem !important;
+			  margin: 3.5px !important;
 			  order: 6;
 			}
 
@@ -610,7 +610,7 @@
 
 	  a {
 		line-height: 1.4;
-		margin-top: .5rem !important;
+		margin-top: 7px !important;
 	  }
 	}
   }
