--- a/scss/components/_buttons_links.scss
+++ b/scss/components/_buttons_links.scss
@@ -111,18 +111,18 @@ ul.alliance_attack_claims_list a,
 #side_select_box p:not(:first-child) a {
   color: $color-primary !important;
   font-family: inherit;
-  font-size: 1rem;
+  font-size: 14px;
   font-weight: initial;
   text-transform: initial;
   white-space: nowrap;
-  padding: 0 .5rem;
+  padding: 0 7px;
   display: inline-block;
   background: rgba($color-secondary, .4) !important;
   height: 1.5rem;
   border: 1px solid rgba($color-primary, .5) !important;
   border-radius: 3px;
   box-shadow: inset 0 2px 4px 2px rgba(#000, .4);
-  margin: 1rem 0;
+  margin: 14px 0;
   cursor: pointer;
   transition-timing-function: linear;
   transition-duration: .75s;
@@ -147,11 +147,11 @@ ul.alliance_attack_claims_list a,
 }
 
 #page_scan .maintext a[href^='showscan'] {
-  margin-bottom: 1rem;
+  margin-bottom: 14px;
 }
 
 ul.alliance_attack_claims_list a {
-  margin: .25rem 0;
+  margin: 3.5px 0;
 }
 
 input[type='submit'] {
@@ -188,7 +188,7 @@ a[target='scan'] {
 			  white-space: nowrap;
 			  letter-spacing: .5px;
 			  display: inline-block;
-			  margin: .75rem;
+			  margin: 10.5px;
 			  position: relative;
 			  transition: all 0.5s ease-in-out;
 
