--- a/scss/components/_fleets.scss
+++ b/scss/components/_fleets.scss
@@ -15,7 +15,7 @@
 	}
 
 	.maintext {
-	  margin-top: .5rem;
+	  margin-top: 7px;
 	}
 
 	p {
@@ -132,7 +132,7 @@
 	  border-image: linear-gradient(to right, transparent 0%, rgba($color-primary, .5) 50%, transparent 100%);
 	  border-image-slice: 1;
 	  box-shadow: inset 0 0 8px 2px rgba(#000, .25), 0 0 3px 3px rgba(#000, .15);
-	  margin: 0 auto .5rem;
+	  margin: 0 auto 7px;
 
 	  div#currentMoves {
 		line-height: 2;
@@ -152,7 +152,7 @@
 
 		input[type='submit'] {
 		  display: block !important;
-		  margin: 1rem auto 0 !important;
+		  margin: 14px auto 0 !important;
 		}
 	  }
 	}
@@ -208,7 +208,7 @@
 
 		th {
 		  color: $color-offwhite;
-		  font-size: 1rem;
+		  font-size: 14px;
 		  font-weight: bold;
 		  text-transform: uppercase;
 		  line-height: 100%;
@@ -237,13 +237,13 @@
 
 	  &:nth-child(3) {
 		td {
-		  font-size: 0.75rem;
+		  font-size: 10.5px;
 		  font-weight: bold;
 		  text-transform: uppercase;
 		  background: $color-bg-th;
 
 		  small {
-			font-size: 0.75rem;
+			font-size: 10.5px;
 		  }
 		}
 	  }
@@ -363,7 +363,7 @@ th.superhighlight {
 	  }
 
 	  &:first-child th {
-		padding: .25rem .5rem;
+		padding: 3.5px 7px;
 		background: rgba(black, .12);
 	  }
 
@@ -379,7 +379,7 @@ th.superhighlight {
 		vertical-align: bottom;
 
 		&[class*='d_fleet_'] {
-		  padding: .25rem .5rem;
+		  padding: 3.5px 7px;
 		}
 	  }
 	}
