--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -2,7 +2,7 @@
 #page table td {
   &:first-child {
 	input[type='submit'] {
-	  margin: 1rem 0 0;
+	  margin: 14px 0 0;
 	}
   }
 
@@ -18,7 +18,7 @@ select,
 .checkbox {
   color: $color_text;
   font-family: $font-default;
-  font-size: 1rem;
+  font-size: 14px;
   vertical-align: middle;
   display: inline-block;
   background: rgba($color-secondary, .4);
@@ -42,7 +42,7 @@ input[type='radio'] {
   border: 1px solid rgba($color-primary, .5);
   border-radius: 50%;
   box-shadow: inset 0 2px 4px 2px rgba(#000, .4) !important;
-  margin: 0 .5rem 0 0;
+  margin: 0 7px 0 0;
   position: relative;
   appearance: none;
 
@@ -50,8 +50,8 @@ input[type='radio'] {
 	&:after {
 	  content: '';
 	  background: $color-primary;
-	  width: .5rem;
-	  height: .5rem;
+	  width: 7px;
+	  height: 7px;
 	  border-radius: 50%;
 	  box-shadow: inset 0 2px 4px 2px rgba(#000, .5);
 	  position: absolute;
@@ -75,7 +75,7 @@ input[type='number'],
 input[type='email'],
 input[type='password'] {
   color: $color_text;
-  padding: .25rem;
+  padding: 3.5px;
   background: rgba($color-secondary, .4);
   border: 1px solid rgba($color-primary, .5);
   box-shadow: inset 0 2px 4px 2px rgba(#000, .4);
@@ -84,8 +84,8 @@ input[type='password'] {
 input[type='checkbox'] {
   vertical-align: -0.25rem;
   background: rgba($color-secondary, .4);
-  width: 1rem;
-  height: 1rem;
+  width: 14px;
+  height: 14px;
   border: 1px solid rgba($color-primary, .5);
   outline: none;
   box-shadow: inset 0 2px 4px 2px rgba(#000, .4);
@@ -122,7 +122,7 @@ table.mceEditor tr td select.mceSelectList {
 }
 
 textarea {
-  padding: .5rem 1rem;
+  padding: 7px 14px;
   min-height: 5rem;
 }
 
