--- a/scss/components/_global.scss
+++ b/scss/components/_global.scss
@@ -62,7 +62,7 @@ td,
 th,
 input {
   font-family: $font-default;
-  font-size: 1rem;
+  font-size: 14px;
   line-height: 1.4;
 }
 
@@ -71,7 +71,7 @@ body {
 }
 
 p {
-  padding: 0 1rem .5rem;
+  padding: 0 14px 7px;
   margin: 0;
 }
 
@@ -95,15 +95,15 @@ hr {
 /* Page Outline
    -------------------------------------------------------*/
 #page {
-  padding: 36px .5rem 0;
+  padding: 36px 7px 0;
   display: grid;
   width: 100%;
   max-width: 90rem;
   margin: 0 auto;
   position: relative;
   grid-template-columns: 12rem 2fr 1fr;
-  grid-template-rows: auto 1fr 1rem;
-  grid-column-gap: 1rem;
+  grid-template-rows: auto 1fr 14px;
+  grid-column-gap: 14px;
   @include respond-below(sm) {
 	padding: 0;
 	max-width: 100vw;
@@ -142,7 +142,7 @@ hr {
 #important_messages_contents {
   color: $color-text;
   white-space: initial;
-  padding: .25rem .5rem;
+  padding: 3.5px 7px;
   background: $color-secondary !important;
   width: 80%;
   border: 0;
@@ -178,7 +178,7 @@ hr {
 
 	#subject {
 	  text-align: left;
-	  padding: 0 .75rem;
+	  padding: 0 10.5px;
 	  display: inline-block;
 	  width: calc(100% - 6rem);
 	  margin-left: 1.7rem;
@@ -187,7 +187,7 @@ hr {
 	#message_body {
 	  text-align: left;
 	  vertical-align: -14rem;
-	  padding: .5rem .75rem;
+	  padding: 7px 10.5px;
 	  display: inline-block;
 	  width: calc(100% - 6rem) !important;
 	  height: 15rem;
@@ -199,7 +199,7 @@ hr {
 	  text-align: center !important;
 	  display: block;
 	  width: 100%;
-	  margin: 0 auto .5rem;
+	  margin: 0 auto 7px;
 	}
 
 	input[type='submit'] {
@@ -229,8 +229,8 @@ hr {
 .important_message {
   .title {
 	color: $color-text;
-	font-size: 1rem;
-	padding: .5rem;
+	font-size: 14px;
+	padding: 7px;
 	display: block;
 	background: $color-secondary;
 	//background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
@@ -239,11 +239,11 @@ hr {
   .time {
 	font-size: $text-small;
 	display: block;
-	margin: .25rem .5rem 1rem;
+	margin: 3.5px 7px 14px;
   }
 
   p {
-	margin: .5rem;
+	margin: 7px;
   }
 }
 
