--- a/scss/components/_login_support_manual_stats.scss
+++ b/scss/components/_login_support_manual_stats.scss
@@ -20,7 +20,7 @@
   }
 
   #tnav {
-	margin: -2.25rem .5rem 0;
+	margin: -2.25rem 7px 0;
   }
 
   #contents_header,
@@ -44,7 +44,7 @@
 	grid-template-columns: 1fr auto 1fr;
 
 	.header {
-	  height: 2rem;
+	  height: 28px;
 	}
   }
 
@@ -54,7 +54,7 @@
 
   input[type='submit'] {
 	display: block;
-	margin: 0 auto 1rem;
+	margin: 0 auto 14px;
   }
 }
 
@@ -83,10 +83,10 @@
 	}
 
 	.maintext {
-	  padding: 1rem;
+	  padding: 14px;
 	  background: $color-secondary;
 	  border: 1px solid rgba($color-primary, .5);
-	  border-radius: .5rem;
+	  border-radius: 7px;
 	  box-shadow: inset 0 0 8px 2px rgba(#000, .25), 1px 8px 30px 3px rgba(#000, .3);
 
 	  p:last-child {
@@ -96,7 +96,7 @@
   }
 
   .container {
-	border-radius: .5rem;
+	border-radius: 7px;
 
 	.header:first-child {
 	  margin-top: 0;
@@ -109,7 +109,7 @@
 		text-align: center;
 
 		input[type='submit'] {
-		  margin: 0 auto 1rem;
+		  margin: 0 auto 14px;
 		}
 
 		.g-recaptcha {
@@ -120,7 +120,7 @@
 
 	  input:not([type='submit']) {
 		width: 80%;
-		margin: 0 auto 1rem;
+		margin: 0 auto 14px;
 	  }
 	}
   }
@@ -142,14 +142,14 @@
 	select {
 	  color: $color-text;
 	  width: 100%;
-	  margin: 0 auto 1rem;
+	  margin: 0 auto 14px;
 	}
 
 	textarea {
 	  width: 100%;
 	  min-width: 35rem;
 	  min-height: 15rem;
-	  margin-bottom: 1rem;
+	  margin-bottom: 14px;
 	}
   }
 }
@@ -158,20 +158,20 @@
   #contents {
 	display: grid;
 	grid-template-columns: 12rem minmax(12rem, 60rem) 1fr;
-	grid-column-gap: .5rem;
+	grid-column-gap: 7px;
   }
 
   #menu {
 	display: flex;
 	flex-direction: column;
-	margin: .5rem 0 .5rem .5rem;
+	margin: 7px 0 7px 7px;
 	grid-column: 1 / 2;
 
 	li {
 	  margin: 0;
 
 	  a {
-		font-size: 0.75rem;
+		font-size: 10.5px;
 	  }
 	}
 
@@ -181,7 +181,7 @@
 	  //border-top: 1px solid rgba($color-primary, .5);
 	  border-image: linear-gradient(to right, transparent 0%, rgba(82, 165, 248, 0.5) 100%);
 	  border-image-slice: 1;
-	  margin: .5rem 0 .5rem;
+	  margin: 7px 0 7px;
 	}
 
 	#entry_search + .entry_sep + .entries {
@@ -215,7 +215,7 @@
   .entries a {
 	font-weight: normal;
 	text-indent: -0.5rem;
-	margin-left: .5rem;
+	margin-left: 7px;
   }
 
   input[type='text'] {
@@ -238,9 +238,9 @@
 	color: $color-text !important;
 	font-size: $text-small;
 	text-transform: uppercase;
-	padding-left: .5rem;
+	padding-left: 7px;
 	border-left: 5px solid $color-negative;
-	margin-left: 1rem;
+	margin-left: 14px;
 	/* font-weight: bold; */
   }
 
@@ -252,7 +252,7 @@
 
   h2 {
 	color: $color-text;
-	font-size: 1rem;
+	font-size: 14px;
 	//background: linear-gradient(135deg, var(--col-panel-light) 0%, var(--col-panel-dark) 100%);
 	text-transform: initial;
 	background: $color-secondary;
@@ -278,7 +278,7 @@
 
 	th, td {
 	  //background-color: var(--col-panel-light);
-	  padding: .15rem .5rem;
+	  padding: 2.1px 7px;
 	}
 
 	th[colspan='17'] {
