--- a/scss/components/_population.scss
+++ b/scss/components/_population.scss
@@ -46,7 +46,7 @@
 	td {
 	  &:first-child {
 		text-align: left;
-		padding: .25rem .5rem;
+		padding: 3.5px 7px;
 	  }
 	}
 
@@ -60,7 +60,7 @@
 	  &:nth-child(7) th {
 		font-weight: normal;
 		text-align: right;
-		padding: .25rem 1rem;
+		padding: 3.5px 14px;
 	  }
 
 	  &:last-child {
@@ -72,7 +72,7 @@
 
 	#total {
 	  padding: 0 !important;
-	  min-width: 2rem;
+	  min-width: 28px;
 	}
 
 	#max_total {
@@ -98,7 +98,7 @@
 	  table {
 		th,
 		td {
-		  padding: .25rem .5rem;
+		  padding: 3.5px 7px;
 		}
 	  }
 	}
@@ -157,7 +157,7 @@
 	  display: flex;
 
 	  span {
-		padding: .15rem 1rem;
+		padding: 2.1px 14px;
 		display: inline-block;
 		flex-basis: 50%;
 	  }
@@ -175,7 +175,7 @@
 
   #tab1 {
 	input[type='submit'] {
-	  margin: 1rem auto;
+	  margin: 14px auto;
 	}
   }
 
@@ -188,6 +188,6 @@
   border: none;
 
   p {
-	margin-left: .5rem;
+	margin-left: 7px;
   }
 }
