--- a/scss/components/_tables.scss
+++ b/scss/components/_tables.scss
@@ -1,5 +1,5 @@
 table {
-  margin-bottom: 1rem;
+  margin-bottom: 14px;
 
   th {
 	background: $color-bg-th;
@@ -12,7 +12,7 @@ table {
   th,
   td {
 	vertical-align: middle;
-	padding: .25rem .5rem;
+	padding: 3.5px 7px;
   }
 }
 
