--- a/scss/components/_top_bar.scss
+++ b/scss/components/_top_bar.scss
@@ -4,7 +4,7 @@
 #page_login #header,
 #page_support #header,
 #page_manual #header {
-  padding: .5rem;
+  padding: 7px;
   background: $color-black-dark;
   background: linear-gradient(180deg, $color-black-light 0%, $color-black-medium 15%, $color-black-dark 100%);
   width: 100% !important;
@@ -26,7 +26,7 @@
   }
 
   &:before {
-	font-size: 2.5rem;
+	font-size: 35px;
 	content: 'Planetarion';
   }
 
@@ -79,6 +79,6 @@
   }
 
   span {
-	padding: .25rem 1rem;
+	padding: 3.5px 14px;
   }
 }
